[package]
name = "meorslib"
version = "0.1.0"
authors = ["CAIMEOX <1853884864@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
chrono = "*"
colored = "1.9"
serde_json = "1.0"
serde = "*"
clap = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
